# heroku-applink-python

./: .coverage  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  TERMS_OF_USE.md  coverage_check.sh  pyproject.toml  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/setup-uv/: action.yml
.github/workflows/: build-and-test.yml  build.yml  ci.yml  create-git-tag-and-draft-release.yml  create-pre-release-pr.yml  create-release-pr.yml  create-tag.yml  draft-release-branch.yml  draft-release.yml  package.yml  pipeline.yml  publish.yml  push_dependabot_metadata.yml  release-pre-release.yml  release.yml  release_test.yml  run_tests.yml  sync_component_metadata.yml  tag-and-release.yml  test-lint-build.yml  test.yml  tps-lock-check.yml
.heroku/components-inventory/: heroku-applink-python.json
docs/: FAQ.md  README.md  release-workflow.md  rollback.md  rollout.md
docs/heroku_applink/: authorization.html  authorization.md  config.html  config.md  connection.html  connection.md  context.html  context.md  exceptions.html  exceptions.md  index.html  index.md  middleware.html  middleware.md  session.md
docs/heroku_applink/data_api/: exceptions.html  exceptions.md  index.html  index.md  record.html  record.md  reference_id.html  reference_id.md  unit_of_work.html  unit_of_work.md
examples/: fastapi_example.py
examples/applink-getting-started-python/: .gitignore  fastapi_example.py  pyproject.toml  requirements.txt
heroku_applink/: __init__.py  authorization.py  config.py  connection.py  context.py  data_cloud_api.py  exceptions.py  middleware.py  session.py
heroku_applink/addons/: __init__.py  heroku_applink.py
heroku_applink/data_api/: __init__.py  _requests.py  record.py
heroku_applink/models/: __init__.py  addon_config.py  org.py  user.py
heroku_applink/utils/: __init__.py  addon_config.py  http_request.py
releasenotes/: README.md
salesforce_sdk/: __init__.py
scripts/: create-pre-release-branch.sh  draft-release-branch.sh  draft-release.sh  update-documentation.sh  update-release-documentation.sh
scripts/release/: draft-release  manual-release  tps-check-lock  tps-record-release  update-release-documentation
templates/python/: text.mako
tests/: .coverage  __init__.py  test_api.py  test_asgi_api.py  test_authorization.py  test_config.py  test_connection.py  test_context.py  test_middleware.py  test_sdk.py  test_session.py  test_version.py  test_wsgi_api.py
tests/addons/: test_addons.py  test_heroku_applink.py
tests/data_api/: test_data_api.py  test_data_api_exceptions.py  test_data_api_init.py  test_data_api_record.py  test_data_api_reference_id.py  test_data_api_requests.py  test_data_api_unit_of_work.py
tests/package_compatibility/: __init__.py  test_data_api.py
tests/utils/: test_addon_config.py  test_http_request.py
