[project]
name = "heroku_applink"
version = "0.1.0"
description = "Simple SDK for Heroku AppLink and Salesforce development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.12",
    "orjson>=3.10.15",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["heroku_applink", "heroku_applink.data_api"]

[project.urls]
Homepage = "https://github.com/heroku/heroku-applink-python"
Documentation = "https://github.com/heroku/heroku-applink-python"
Repository = "https://github.com/heroku/heroku-applink-python.git"
"Bug Tracker" = "https://github.com/heroku/heroku-applink-python/issues"
Changelog = "https://github.com/heroku/heroku-applink-python/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=heroku_applink --cov-report=term-missing"
asyncio_mode = "auto"
